--- a/Messenger App/Base.lproj/Main.storyboard
+++ b/Messenger App/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YvD-kN-6DS">
+                            <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YvD-kN-6DS">
                                 <rect key="frame" x="131.5" y="89.5" width="151" height="149"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="YvD-kN-6DS" secondAttribute="height" multiplier="1:1" constant="1" id="7eR-Sj-l5Z"/>
@@ -265,29 +265,26 @@
             <objects>
                 <viewController storyboardIdentifier="ProfileVC" id="BrN-Ub-t4w" customClass="ProfileVC" customModule="Messenger_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hi2-We-4lP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vUn-ct-1AO">
-                                <rect key="frame" x="131.5" y="98.5" width="151" height="149"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vUn-ct-1AO">
+                                <rect key="frame" x="132" y="10.5" width="150" height="149"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="vUn-ct-1AO" secondAttribute="height" multiplier="1:1" constant="1" id="aVk-E9-IX8"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="mv5-aa-Zsl"/>
+                                    <constraint firstAttribute="height" constant="150" id="1jk-NA-GfP"/>
+                                    <constraint firstAttribute="width" constant="150" id="YA4-Tr-IeY"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoG-Mk-8fn">
-                                <rect key="frame" x="50" y="318" width="314" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="bkL-UO-xD4"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoG-Mk-8fn">
+                                <rect key="frame" x="50" y="230" width="314" height="45"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCw-gw-A04">
-                                <rect key="frame" x="50" y="563" width="314" height="45"/>
+                                <rect key="frame" x="50" y="475" width="314" height="45"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="WIH-hi-X7W"/>
+                                    <constraint firstAttribute="height" constant="45" id="PRt-M7-rfs"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled">
@@ -311,18 +308,19 @@
                         <viewLayoutGuide key="safeArea" id="yLk-WX-ZZh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VCw-gw-A04" firstAttribute="top" secondItem="DoG-Mk-8fn" secondAttribute="bottom" constant="200" id="FzO-Hf-u8w"/>
-                            <constraint firstItem="DoG-Mk-8fn" firstAttribute="leading" secondItem="yLk-WX-ZZh" secondAttribute="leading" constant="50" id="N2I-hz-eHa"/>
-                            <constraint firstItem="yLk-WX-ZZh" firstAttribute="trailing" secondItem="VCw-gw-A04" secondAttribute="trailing" constant="50" id="Rew-4G-vr7"/>
-                            <constraint firstItem="vUn-ct-1AO" firstAttribute="top" secondItem="yLk-WX-ZZh" secondAttribute="top" constant="10" id="ZTQ-u4-JiP"/>
-                            <constraint firstItem="DoG-Mk-8fn" firstAttribute="top" secondItem="vUn-ct-1AO" secondAttribute="bottom" constant="70" id="alG-vP-QwU"/>
-                            <constraint firstItem="VCw-gw-A04" firstAttribute="leading" secondItem="yLk-WX-ZZh" secondAttribute="leading" constant="50" id="bFZ-Qi-t6J"/>
-                            <constraint firstItem="vUn-ct-1AO" firstAttribute="centerX" secondItem="hi2-We-4lP" secondAttribute="centerX" id="bdZ-aQ-GV9"/>
-                            <constraint firstItem="yLk-WX-ZZh" firstAttribute="trailing" secondItem="DoG-Mk-8fn" secondAttribute="trailing" constant="50" id="tGs-q4-ZdE"/>
+                            <constraint firstItem="yLk-WX-ZZh" firstAttribute="bottom" secondItem="VCw-gw-A04" secondAttribute="bottom" constant="153" id="Chs-V5-a5E"/>
+                            <constraint firstItem="VCw-gw-A04" firstAttribute="leading" secondItem="yLk-WX-ZZh" secondAttribute="leading" constant="50" id="J0l-fo-GOa"/>
+                            <constraint firstItem="VCw-gw-A04" firstAttribute="leading" secondItem="DoG-Mk-8fn" secondAttribute="leading" id="LwS-1M-Hzy"/>
+                            <constraint firstItem="DoG-Mk-8fn" firstAttribute="top" secondItem="vUn-ct-1AO" secondAttribute="bottom" constant="70" id="O2p-cR-oJP"/>
+                            <constraint firstItem="vUn-ct-1AO" firstAttribute="centerX" secondItem="DoG-Mk-8fn" secondAttribute="centerX" id="gri-ae-bMp"/>
+                            <constraint firstItem="vUn-ct-1AO" firstAttribute="centerX" secondItem="VCw-gw-A04" secondAttribute="centerX" id="oDM-1m-0lu"/>
+                            <constraint firstItem="vUn-ct-1AO" firstAttribute="centerX" secondItem="hi2-We-4lP" secondAttribute="centerX" id="q8h-3o-0Di"/>
+                            <constraint firstItem="vUn-ct-1AO" firstAttribute="top" secondItem="yLk-WX-ZZh" secondAttribute="top" constant="10" id="vDg-1W-lIP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HNy-J1-hYT"/>
                     <connections>
+                        <outlet property="imgVProfile" destination="vUn-ct-1AO" id="rx3-r5-a36"/>
                         <outlet property="lbUsernameOutlet" destination="DoG-Mk-8fn" id="cDR-d6-wmv"/>
                     </connections>
                 </viewController>
@@ -355,9 +353,15 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="24Q-Pj-Zfe" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="profile" image="person.circle" catalog="system" id="5Yy-IA-F7g"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uv8-u3-AGZ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" largeTitles="YES" id="Uv8-u3-AGZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                        <color key="tintColor" name="AccentColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="italicSystem" pointSize="1"/>
+                            <color key="textShadowColor" name="AccentColor"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -401,6 +405,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
