--- a/Messenger App/Base.lproj/Main.storyboard
+++ b/Messenger App/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000.0000000000001" y="213.61607142857142"/>
+            <point key="canvasLocation" x="646" y="192"/>
         </scene>
         <!--RegisterVC-->
         <scene sceneID="yPn-Fa-m4Y">
@@ -229,36 +229,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GLQ-ei-elX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="91" y="-496"/>
+            <point key="canvasLocation" x="-122" y="-477"/>
         </scene>
-        <!--Conversations-->
-        <scene sceneID="Zgu-t2-WCS">
+        <!--ChatVC-->
+        <scene sceneID="DtW-ER-fBR">
             <objects>
-                <tableViewController storyboardIdentifier="ConversationsTVC" id="3H4-3q-APe" customClass="ConversationsTVC" customModule="Messenger_App" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="2Qe-Kv-Ibf">
+                <viewController id="Z79-MD-HQ2" customClass="ChatVC" customModule="Messenger_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wWo-PU-2oF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="SZf-Lq-edu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="conversatinsCell" rowHeight="101" id="Tkt-MW-TiK">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="101"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tkt-MW-TiK" id="AkW-WZ-fjD">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="101"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="3H4-3q-APe" id="0aB-5l-Oh6"/>
-                            <outlet property="delegate" destination="3H4-3q-APe" id="mFX-KR-AOb"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Conversations" id="aqX-I5-UIO"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FgT-HM-5eq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C67-Ud-K1U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-878.26086956521749" y="-477.45535714285711"/>
+            <point key="canvasLocation" x="622" y="-471"/>
         </scene>
         <!--ProfileVC-->
         <scene sceneID="Yex-jv-fQ7">
@@ -326,7 +312,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BsT-cC-NLS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-174" y="192"/>
+            <point key="canvasLocation" x="-367" y="192"/>
         </scene>
         <!--Chat-->
         <scene sceneID="FTS-rq-Zab">
@@ -334,13 +320,13 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xQ3-G0-xqb" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Chat" image="message.fill" catalog="system" id="eF7-zp-LCh"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UjU-B7-0Vc">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="UjU-B7-0Vc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="3H4-3q-APe" kind="relationship" relationship="rootViewController" id="u90-j0-IcK"/>
+                        <segue destination="hjU-YO-vFH" kind="relationship" relationship="rootViewController" id="Kq8-Xq-d46"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mf0-m5-Fvv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -350,7 +336,7 @@
         <!--profile-->
         <scene sceneID="KpR-id-VFa">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="24Q-Pj-Zfe" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavigationControllerLogIn" automaticallyAdjustsScrollViewInsets="NO" id="24Q-Pj-Zfe" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="profile" image="person.circle" catalog="system" id="5Yy-IA-F7g"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" largeTitles="YES" id="Uv8-u3-AGZ">
@@ -383,13 +369,29 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="24Q-Pj-Zfe" kind="relationship" relationship="viewControllers" id="d01-yh-Zfu"/>
-                        <segue destination="xQ3-G0-xqb" kind="relationship" relationship="viewControllers" id="tAK-pv-aBs"/>
+                        <segue destination="xQ3-G0-xqb" kind="relationship" relationship="viewControllers" id="gvQ-ag-CbJ"/>
+                        <segue destination="24Q-Pj-Zfe" kind="relationship" relationship="viewControllers" id="DX3-Ut-uv4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eDc-s7-0ja" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2606" y="192"/>
+        </scene>
+        <!--Conversations-->
+        <scene sceneID="GY7-kV-DYg">
+            <objects>
+                <viewController id="hjU-YO-vFH" customClass="ConversationsVC" customModule="Messenger_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nek-44-e0v">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="XgG-F9-r1C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Conversations" id="oPQ-ID-AMU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3lt-wb-lmf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-913" y="-477"/>
         </scene>
     </scenes>
     <resources>
